// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils .getArgs should parse the args 1`] = `
Object {
  "nodeBin": "/path/to/node",
  "runCfgPath": "./tests/kitchen-sink-tests/sauce-runner.json",
  "suiteName": "kitchen-sink-1",
}
`;

exports[`utils .getEnv should parse env variables from runConfig 1`] = `
Object {
  "A": "1",
  "B": "2",
  "C": "3",
  "HELLO": "WORLD",
}
`;

exports[`utils .installDependencies should call node + npm on Sauce VM 1`] = `
Array [
  Array [
    "/fake/home/node",
    Array [
      "/fake/home/node_modules/npm/bin/npm-cli",
      "install",
      "--no-save",
      "left-pad@1.3.0",
      "jquery@2",
    ],
  ],
]
`;

exports[`utils .installDependencies should call npm + install on non-Sauce VM 1`] = `
Array [
  Array [
    "npm",
    Array [
      "install",
      "--no-save",
      "left-pad@1.3.0",
      "jquery@2",
    ],
  ],
]
`;
